Layout Changes - Qty is now right aligned. Label is now centered. - Name edit button is now a label to prevent a warning. - Input Row now sets min-width to 0 to prevent overflows. - Range now properly fill up the whole width via flex. - Bounce Variance -> Bounce Drag

--- a/src/app/screen-bouncer/settings/input-fields/input-field-label/input-field-label.component.css
+++ b/src/app/screen-bouncer/settings/input-fields/input-field-label/input-field-label.component.css
@@ -1,3 +1,7 @@
+label{
+  text-align: inherit;
+}
+
 :host ::ng-deep input.ng-invalid{
   background-color: ivory;
   border: none;
@@ -6,8 +10,4 @@
 
 :host ::ng-deep textarea{
   resize: vertical;
-}
-
-.invisible{
-  visibility: hidden;
 }
