--- a/src/app/screen-bouncer/settings/input-fields/input-field-slider/input-field-slider.component.css
+++ b/src/app/screen-bouncer/settings/input-fields/input-field-slider/input-field-slider.component.css
@@ -13,3 +13,7 @@ input[type=number] {
 input{
     text-align: center;
 }
+
+input[type="range"]{
+  flex: 1;
+}
