--- a/src/app/screen-bouncer/settings/logo-config-box/logo-config-box.component.css
+++ b/src/app/screen-bouncer/settings/logo-config-box/logo-config-box.component.css
@@ -48,6 +48,9 @@ img{
   flex-flow: row;
   gap: 10px;
 }
+.inputRow > *{
+  min-width: 0;
+}
 
 .actionBar{
   display: flex;
